# pdf_extractor

./: .dockerignore  .gitignore  .roorules  .roorules-senior-coder  Dockerfile  Dockerfile.code_executor  Dockerfile.litellm-proxy  README.md  _create_test_pdf.py  check_pdf_extractor_db.py  complete_fix.sh  complete_vector_test.py  config.yaml  direct_search_test.py  docker-compose.yml  dynamic_task.md  final_fix.sh  final_update.sh  fix_arangodb.sh  fix_collections_and_views.py  fix_crud.py  fix_fstring.sh  fix_pdf_integration.py  fix_quotes.sh  fix_semantic_search.py  fix_vector_index.py  fix_vector_issue.py  implement_search.py  insert_current_message.py  labeling_config.xml  litellm_config.yaml  message_search.py  minimal_test.py  mod_prepare_message.py  pyproject.toml  replace_main.py  requirements.txt  sample_batch_request.json  sample_batch_request_cli.json  sample_cli_ask_request.json  (+29 more)
.claude/: context_summary.md  settings.json  status.md  summary.md
.claude/project_docs/: ARANGODB_INTEGRATION.md  CODE_DETAILS.md  CONSOLIDATED_STANDARDS.md  DEVELOPMENT_CORE.md  DIRECTORY_STRUCTURE.md  FILE_OPERATIONS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  JSON_SCHEMA_FORMAT.md  NEXT_TASK_SETUP.md  PDF_EXTRACTION_PIPELINE.md  PROJECT_ACCESS.md  PROJECT_SETUP.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  TASK_PROMPT_TEMPLATE.md  TASK_WORKFLOW.md  VALIDATION_REQUIREMENTS.md  lessons_learned.json
.temp/: fix_table_extractor.py  update_table_extractor.py
.temp/root_cleanup/: cleanup.sh  cleanup_src.sh  move_files.sh  organize_project.sh  temp_edit.txt  test_strategy.sh  (+1 more)
claude_deskop/: CODE_PRINCIPALS.md  PROJECT_ACCESS.md  TROUBLESHOOTING.md  VALIDATION_REQUIREMENTS.md
code_executor/: README.md  requirements.txt
docs/: GUIDELINES.md  table_merger.md
memory-bank/: CODING_PRINCIPLES.md
output/: direct_merger_conservative.json  direct_merger_none.json  json_output.json  markdown_output.json  synthetic_merger_aggressive.json  synthetic_merger_conservative.json  synthetic_merger_none.json
src/: api.py  cli.py  marker_processor.py  parsers.py  table_extractor.py  utils.py
tasks/: task_mini.md
test_runs/: search_cmd_test.py  search_commands.py  simplified_search.py  test_search.py  test_search_functions.py
tests/: run_tests.py  validate_all_search_functions.py
(+277 files in other folders)
